[tool.poetry]
name = "repl-nix-lyan-art-gallery"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_lyan_art_gallery"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
path = "^17.0.0"
cs50 = "^9.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
